--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -32,16 +32,15 @@
         app:srcCompat="@drawable/register_kotakbesar" />
 
     <ImageView
-        android:id="@+id/home_imageview_backbutton"
+        android:id="@+id/register_imageview_backbutton"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_marginStart="21dp"
         android:layout_marginTop="27.45dp"
+        android:clickable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/backbuttonwhite"
-        android:clickable="true"
-        android:onClick="pindahsplashactivity"/>
+        app:srcCompat="@drawable/backbuttonwhite" />
 
     <TextView
         android:id="@+id/textView"
