--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -61,15 +61,12 @@
         android:id="@+id/profile_imageview_backbutton"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        app:srcCompat="@drawable/backbuttonblack"
-        tools:layout_editor_absoluteX="152dp"
-        tools:layout_editor_absoluteY="102dp"
         android:layout_marginStart="21dp"
         android:layout_marginTop="27.45dp"
+        android:clickable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:clickable="true"
-        android:onClick="pindahhomeactivity"/>
+        app:srcCompat="@drawable/backbuttonblack" />
 
     <ImageView
         android:id="@+id/profile_imageview_morebutton"
