--- a/app/src/main/res/layout/activity_addreview.xml
+++ b/app/src/main/res/layout/activity_addreview.xml
@@ -324,12 +324,12 @@
         android:id="@+id/textView23"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="161dp"
         android:layout_marginTop="5dp"
         android:fontFamily="@font/poppins_bold"
         android:text="Laporkan Restoran"
         android:textColor="#E2E3E6"
-        android:textSize="9sp"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addreview_imageview_plus" />
 
