--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -146,7 +146,7 @@
         android:ems="10"
         android:fontFamily="@font/poppins_bold"
         android:hint="Password"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:paddingLeft="18dp"
         android:textColor="#939393"
         android:textSize="14sp"
